# pcm

./: .gitignore  ACTION_PLAN.md  BUILD_CONTEXT.txt  CREATE_LOGO.md  DEPLOY.md  FINAL_SUMMARY.md  FRONTEND_ANALYSIS_REPORT.md  FRONTEND_FIXES_SUMMARY.md  INFINITE_LOADING_FIXES.md  LAB.md  LOADING_INFINITO_SOLUCAO.md  MIGRATION.md  PHASE_1_COMPLETE.md  PHASE_1_PROGRESS.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  RBAC3_QUICK_START.md  RBAC_IMPLEMENTATION_PLAN.md  README.en.md  README.md  RESUMO_EXECUTIVO_TASK_4.md  ROADMAP.md  SETUP.md  SYSTEM_DIAGNOSIS.md  TASK_4_FINAL_STATUS.md  TASK_4_FRONTEND_COMPLETION.md  TASK_4_PROGRESS.md  TASK_4_RBAC3_IMPLEMENTATION.md  TESTE_RAPIDO.md  TESTING_GUIDE.md  VISUAL_IDENTITY_CHECKLIST.md  add_permissions_column.py  fix_admin_role.py  fix_tenant_status_enum.py  fix_users_table.py  fix_users_table.sql  grant_admin_full_permissions.py  init-lab-cluster.py  recreate_admin.py  recreate_admin_bcrypt.py  (+11 more)
pcm/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  auto_setup.py  check_tables.py  create_admin_simple.py  create_admin_user.py  create_tables.py  create_user_and_tables.sql  pyproject.toml  requirements.txt  run.py  seed_rbac_permissions.py  setup_and_create.py  simple_config_test.py  test_config_properties_runner.py  test_health_monitor_runner.py  test_job_runner_validation.py  test_login.py  test_pbs_server_manager_runner.py  test_scheduler_properties_runner.py
pcm/alembic/: env.py  script.py.mako
pcm/core/: __init__.py  config.py
pcm/services/: cluster_service.py  ldap_service.py  permission_service.py  rbac3_service.py  (+1 more)
(+369 files in other folders)
